--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "openai": "^4.91.1"
+    "openai": "^4.91.1",
+    "prisma": "^6.6.0"
   }
 }
