--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@clerk/express": "^1.4.7",
     "@prisma/client": "^6.6.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
