--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@clerk/express": "^1.4.7",
     "@prisma/client": "^6.6.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "openai": "^4.91.1",
