--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@clerk/express": "^1.4.7",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "openai": "^4.91.1",
