--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "nodemon": "^3.1.9",
+    "prisma": "^6.8.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
   "dependencies": {
     "@clerk/express": "^1.4.7",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.8.2",
     "@prisma/extension-accelerate": "^1.3.0",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "openai": "^4.91.1",
-    "prisma": "^6.6.0"
+    "openai": "^4.91.1"
   }
 }
