--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "student-budget-buddy-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,9 +28,12 @@
     "@prisma/client": "^6.8.2",
     "@prisma/extension-accelerate": "^1.3.0",
     "@types/cors": "^2.8.17",
+    "@types/luxon": "^3.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "openai": "^4.91.1"
+    "luxon": "^3.6.1",
+    "openai": "^4.91.1",
+    "zod": "^3.25.20"
   }
 }
