--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cors": "^2.8.17",
     "@types/luxon": "^3.6.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "luxon": "^3.6.1",
