--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "luxon": "^3.6.1",
+    "node-cron": "^4.0.7",
     "openai": "^4.91.1",
+    "rrule": "^2.8.1",
     "zod": "^3.25.20"
   }
 }
