--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.3",
+    "@types/express": "^5.0.3",
+    "@types/node": "^22.17.2",
     "nodemon": "^3.1.9",
     "prisma": "^6.8.2",
     "ts-node": "^10.9.2",
@@ -27,8 +27,9 @@
     "@clerk/express": "^1.5.0",
     "@prisma/client": "^6.8.2",
     "@prisma/extension-accelerate": "^1.3.0",
-    "@types/cors": "^2.8.17",
+    "@types/cors": "^2.8.19",
     "@types/luxon": "^3.6.2",
+    "@types/morgan": "^1.9.10",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
